Update on Overleaf.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,7 +1,431 @@
-@book{latex,
-  title = {LaTeX : A Documentation Preparation System User's Guide and Reference Manual},
-  publisher = {Addison-Wesley Professional},
-  year = {1994},
-  author = {Leslie Lamport}
+@article {Boss2007,
+	author = "Boss, Greg and Padma, Malladi and Dennis, Quan and Linda, Legregni and Harold, Hall",
+    title = "Cloud computing",
+    journal = "BM white paper",
+    volume = "321",
+    pages = "224--231",
+    year = "2007",
+}
+@online {Lohr2007,
+	author = {Lohr Steve},
+    title = "The New York Times",
+    url = "https://www.nytimes.com/2007/10/08/technology/08cloud.html",
+    year = "2007",
+    month = "October",
+    day = "8",
+    addendum = "(accessed: 2018-04-23)"
+}
+@inproceedings{corbato1965introduction,
+  title={Introduction and overview of the Multics system},
+  author={Corbat{\'o}, Fernando J and Vyssotsky, Victor A},
+  booktitle={Proceedings of the November 30--December 1, 1965, fall joint computer conference, part I},
+  pages={185--196},
+  year={1965},
+  organization={ACM}
+}
+@inproceedings{foster2008cloud,
+  title={Cloud computing and grid computing 360-degree compared},
+  author={Foster, Ian and Zhao, Yong and Raicu, Ioan and Lu, Shiyong},
+  booktitle={Grid Computing Environments Workshop, 2008. GCE'08},
+  pages={1--10},
+  year={2008},
+  organization={Ieee}
+}
+@misc{draftworking,
+  title={Working Definition of Cloud Computing v15},
+  author={Draft, NIST}
 }
 
+@article{bora2013learning,
+  title={E-learning using cloud computing},
+  author={Bora, Utpal Jyoti and Ahmed, Majidul},
+  journal={International Journal of Science and Modern Engineering},
+  volume={1},
+  number={2},
+  pages={9--12},
+  year={2013},
+  publisher={Citeseer}
+}
+@inproceedings{staron2011monitoring,
+  title={Monitoring bottlenecks in agile and lean software development projects--a method and its industrial use},
+  author={Staron, Miroslaw and Meding, Wilhelm},
+  booktitle={International Conference on Product Focused Software Process Improvement},
+  pages={3--16},
+  year={2011},
+  organization={Springer}
+}
+@article{funika2010towards,
+  title={Towards autonomic semantic-based management of distributed applications},
+  author={Funika, Wlodzimierz and Kupisz, Mateusz and Koperek, Pawel},
+  journal={Computer Science},
+  volume={11},
+  pages={51--63},
+  year={2010}
+}
+@online {SAMMProjectArchive,
+    title = "SAMM Project",
+    url = "http://code.google.com/p/sammanager",
+    addendum = "(Archive - accessed: 2018-04-30)"
+}
+@inproceedings{fernandez2014metrics,
+  title={Metrics for Accountability in the Cloud},
+  author={Fern{\'a}ndez-Gago, Carmen and Nu{\~n}ez, David},
+  booktitle={Summer School on Accountability and Security in the Cloud},
+  pages={129--153},
+  year={2014},
+  organization={Springer}
+}
+@article{luo2012cloudrank,
+  title={Cloudrank-d: benchmarking and ranking cloud computing systems for data processing applications},
+  author={Luo, Chunjie and Zhan, Jianfeng and Jia, Zhen and Wang, Lei and Lu, Gang and Zhang, Lixin and Xu, Cheng-Zhong and Sun, Ninghui},
+  journal={Frontiers of Computer Science},
+  volume={6},
+  number={4},
+  pages={347--362},
+  year={2012},
+  publisher={Springer}
+}
+@online {CloudSuiteBlog,
+    title = "CloudSuite",
+    url = "http://cloudsuite.ch/",
+    addendum = "(accessed: 2018-04-30)"
+}
+@article{kavanagh2015openstack,
+  title={OpenStack as the API framework for NFV: the benefits, and the extensions needed},
+  author={Kavanagh, ALAN},
+  journal={Ericsson Review},
+  volume={2},
+  year={2015}
+}
+@online {OpenStackBlog,
+    title = "OpenStack",
+    url = "https://docs.openstack.org/security-guide/introduction/introduction-to-openstack.html",
+    addendum = "(accessed: 2018-05-01)"
+}
+@online {memcached2018,
+    title = "memcached",
+    url = "http://memcached.org/about",
+    addendum = "(accessed: 2018-05-08)"
+}
+@inproceedings{klinger2012online,
+  title={Online communities support policy-making: The need for data analysis},
+  author={Klinger, Roman and Senger, Philipp and Madan, Sumit and Jacovi, Michal},
+  booktitle={International Conference on Electronic Participation},
+  pages={132--143},
+  year={2012},
+  organization={Springer}
+}
+@online {Spark_MLlib,
+    title = "Spark MLlib.",
+    url = "https://spark.apache.org/mllib/",
+    addendum = "(accessed: 2018-05-01)"
+}
+@online {CloudSuite_WebServing,
+    title = "WebServing",
+    url = "http://cloudsuite.ch//pages/benchmarks/webserving/",
+    addendum = "(accessed: 2018-05-01)"
+}
+
+@online {CloudSuite_In-Memory_Analytics,
+    title = "In-Memory Analytics",
+    url = "http://cloudsuite.ch//pages/benchmarks/inmemoryanalytics/",
+    addendum = "(accessed: 2018-05-02)"
+}
+
+@online {CloudSuite_Data_Caching,
+    title = "Data Caching",
+    url = "http://cloudsuite.ch//pages/benchmarks/datacaching/",
+    addendum = "(accessed: 2018-05-02)"
+}
+
+@online {CloudSuite_Data_Analytics,
+    title = "Data Caching",
+    url = "http://cloudsuite.ch//pages/benchmarks/dataanalytics/",
+    addendum = "(accessed: 2018-05-02)"
+}
+@online {hadoop2018,
+    title = "Hadoop",
+    url = "http://hadoop.apache.org/",
+    addendum = "(accessed: 2018-05-08)"
+}
+@online {mahout2018,
+    title = "mahout",
+    url = "https://mahout.apache.org/docs/latest/index.html",
+    addendum = "(accessed: 2018-05-08)"
+}
+@online {apache2018,
+    title = "apache",
+    url = "https://httpd.apache.org/",
+    addendum = "(accessed: 2018-05-08)"
+}
+@online {apachesoir2018,
+    title = "Apache Soir",
+    url = "http://lucene.apache.org/solr/guide/",
+    addendum = "(accessed: 2018-05-08)"
+}
+@article{arutyunov2012cloud,
+  title={Cloud computing: Its history of development, modern state, and future considerations},
+  author={Arutyunov, VV},
+  journal={Scientific and Technical Information Processing},
+  volume={39},
+  number={3},
+  pages={173--178},
+  year={2012},
+  publisher={Springer}
+}
+@article{campbell2009open,
+  title={Open Cirrus™ Cloud Computing Testbed: Federated Data Centers for Open Source Systems and Services Research.},
+  author={Campbell, Roy H and Gupta, Indranil and Heath, Michael T and Ko, Steven Y and Kozuch, Michael and Kunze, Marcel and Kwan, Thomas T and Lai, Kevin and Lee, Hing Yan and Lyons, Martha and others},
+  journal={HotCloud},
+  volume={9},
+  pages={1--1},
+  year={2009}
+}
+@inproceedings{qian2009cloud,
+  title={Cloud computing: An overview},
+  author={Qian, Ling and Luo, Zhiguo and Du, Yujian and Guo, Leitao},
+  booktitle={IEEE International Conference on Cloud Computing},
+  pages={626--631},
+  year={2009},
+  organization={Springer}
+}
+@inproceedings{sullivan2006conversation,
+  title={Conversation with Eric Schmidt hosted by Danny Sullivan},
+  author={Sullivan, Danny},
+  booktitle={Search Engine Strategies Conference},
+  year={2006}
+}
+@incollection{susarla2006understanding,
+  title={Understanding the ‘service’component of application service provision: an empirical analysis of satisfaction with ASP services},
+  author={Susarla, Anjana and Barua, Anitesh and Whinston, Andrew B},
+  booktitle={Information Systems Outsourcing},
+  pages={481--521},
+  year={2006},
+  publisher={Springer}
+}
+@misc{robison2009everything,
+  title={Everything-as-a-Service: A blue sky view of the cloud},
+  author={Robison, Shane},
+  year={2009}
+}
+@inproceedings{xin2011cloud,
+  title={Cloud-based innovation of Internet long tail},
+  author={Xin, Liu and Song, Chen},
+  booktitle={Product Innovation Management (ICPIM), 2011 6th International Conference on},
+  pages={603--607},
+  year={2011},
+  organization={IEEE}
+}
+@online {defineConcept,
+    title = "How to Write an Extended Definition",
+    url = "http://www.wou.edu/~corninr/wr135/definition.html",
+    addendum = "(accessed: 2018-05-27)"
+}
+@techreport{armbrust2009above,
+  title={Above the clouds: A berkeley view of cloud computing},
+  author={Armbrust, Michael and Fox, Armando and Griffith, Rean and Joseph, Anthony D and Katz, Randy H and Konwinski, Andrew and Lee, Gunho and Patterson, David A and Rabkin, Ariel and Stoica, Ion and others},
+  year={2009},
+  institution={Technical Report UCB/EECS-2009-28, EECS Department, University of California, Berkeley}
+}
+@techreport{hilley2009cloud,
+  title={Cloud computing: A taxonomy of platform and infrastructure-level offerings},
+  author={Hilley, David},
+  year={2009},
+  institution={Georgia Institute of Technology}
+}
+@article{lin2009cloud,
+  title={Cloud computing: IT as a service},
+  author={Lin, Geng and Fu, David and Zhu, Jinzy and Dasmalchi, Glenn},
+  journal={IT Professional Magazine},
+  volume={11},
+  number={2},
+  pages={10},
+  year={2009},
+  publisher={IEEE Computer Society}
+}
+@article{khasnabish2012cloud,
+  title={Cloud computing, networking, and services},
+  author={Khasnabish, Bhumip and Huang, Dijiang and Bai, Xiaoying and Bellavista, Paolo and Martinez, Gregorio and Antonopoulos, Nick},
+  journal={Journal of Network and Systems Management},
+  volume={20},
+  number={4},
+  pages={463--467},
+  year={2012},
+  publisher={Springer}
+}
+@article{mell2011nist,
+  title={The NIST definition of cloud computing},
+  author={Mell, Peter and Grance, Tim and others},
+  year={2011},
+  publisher={Computer Security Division, Information Technology Laboratory, National Institute of Standards and Technology Gaithersburg}
+}
+@inproceedings{thiel2015cloud,
+  title={Cloud Computing in Legal Metrology},
+  author={Thiel, F and Esche, M and Peters, D and Grottker, U},
+  booktitle={17th International Congress of Metrology},
+  pages={16001},
+  year={2015},
+  organization={EDP Sciences}
+}
+@article{wang2010cloud,
+  title={Cloud computing: a perspective study},
+  author={Wang, Lizhe and Von Laszewski, Gregor and Younge, Andrew and He, Xi and Kunze, Marcel and Tao, Jie and Fu, Cheng},
+  journal={New Generation Computing},
+  volume={28},
+  number={2},
+  pages={137--146},
+  year={2010},
+  publisher={Springer}
+}
+@article{li2010intel,
+  title={Intel cloud computing taxonomy and ecosystem analysis},
+  author={Li, H and Spence, C and Armstrong, R and Godfrey, R and Schneider, R and Smith, J and White, R},
+  journal={IT-Intel Brief (Cloud Computing)},
+  year={2010}
+}
+@inproceedings{sun2007software,
+  title={Software as a service: An integration perspective},
+  author={Sun, Wei and Zhang, Kuo and Chen, Shyh-Kwei and Zhang, Xin and Liang, Haiqi},
+  booktitle={International Conference on Service-Oriented Computing},
+  pages={558--569},
+  year={2007},
+  organization={Springer}
+}
+@article{tsai2014software,
+  title={Software-as-a-service (SaaS): perspectives and challenges},
+  author={Tsai, WeiTek and Bai, XiaoYing and Huang, Yu},
+  journal={Science China Information Sciences},
+  volume={57},
+  number={5},
+  pages={1--15},
+  year={2014},
+  publisher={Springer}
+}
+@inproceedings{haselmann2011software,
+  title={Software-as-a-service in small and medium enterprises: an empirical attitude assessment},
+  author={Haselmann, Till and Vossen, Gottfried},
+  booktitle={International Conference on Web Information Systems Engineering},
+  pages={43--56},
+  year={2011},
+  organization={Springer}
+}
+@inproceedings{khan2012cloud,
+  title={Cloud computing: analysis of various services},
+  author={Khan, Nawsher and Noraziah, Ahmad and Herawan, Tutut and Deris, Mustafa Mat},
+  booktitle={International Conference on Information Computing and Applications},
+  pages={397--404},
+  year={2012},
+  organization={Springer}
+}
+@incollection{SITARAM201273,
+title = "Chapter 3 - Platform as a Service",
+editor = "Dinkar Sitaram and Geetha Manjunath",
+booktitle = "Moving To The Cloud",
+publisher = "Syngress",
+address = "Boston",
+pages = "73 - 152",
+year = "2012",
+isbn = "978-1-59749-725-1",
+doi = "https://doi.org/10.1016/B978-1-59749-725-1.00003-2",
+url = "http://www.sciencedirect.com/science/article/pii/B9781597497251000032",
+author = "Dinkar Sitaram and Geetha Manjunath",
+keywords = "Platform as a Service, Azure, Mashups, Yahoo!, Microsoft, IBM",
+}
+@article{teixeira2014building,
+  title={The building blocks of a PaaS},
+  author={Teixeira, Cl{\'a}udio and Pinto, Joaquim Sousa and Azevedo, Ricardo and Batista, Tiago and Monteiro, Andr{\'e}},
+  journal={Journal of Network and Systems Management},
+  volume={22},
+  number={1},
+  pages={75--99},
+  year={2014},
+  publisher={Springer}
+}
+@article{kepes2010moving,
+  title={Moving your Infrastructure to the Cloud: How to Maximize Benefits and Avoid Pitfalls},
+  author={Kepes, Ben},
+  journal={Diversity Limited, p4},
+  year={2010}
+}
+@article{kepes2011understanding,
+  title={Understanding the cloud computing stack: Saas, paas, iaas},
+  author={Kepes, Ben},
+  journal={Diversity Limited},
+  pages={1--17},
+  year={2011}
+}
+@article{pettey2012gartner,
+  title={Gartner outlines five cloud computing trends that will affect cloud strategy through 2015},
+  author={Pettey, Christy and van der Meulen, Rob},
+  journal={Press Release},
+  year={2012}
+}
+@article{doelitzscher2011private,
+  title={Private cloud for collaboration and e-Learning services: from IaaS to SaaS},
+  author={Doelitzscher, Frank and Sulistio, Anthony and Reich, Christoph and Kuijs, Hendrik and Wolf, David},
+  journal={Computing},
+  volume={91},
+  number={1},
+  pages={23--42},
+  year={2011},
+  publisher={Springer}
+}
+@inproceedings{tanwer2010thin,
+  title={Thin apps store for smart phones based on private cloud infrastructure},
+  author={Tanwer, Ashish and Tayal, Abhishek and Hussain, Muzahid and Reel, Parminder Singh},
+  booktitle={Kaleidoscope: Beyond the Internet?-Innovations for Future Networks and Services, 2010 ITU-T},
+  pages={1--6},
+  year={2010},
+  organization={IEEE}
+}
+@inproceedings{zheng2011design,
+  title={Design and research on private cloud computing architecture to support smart grid},
+  author={Zheng, Ling and Hu, Yanxiang and Yang, Chaoran},
+  booktitle={Intelligent Human-Machine Systems and Cybernetics (IHMSC), 2011 International Conference on},
+  volume={2},
+  pages={159--161},
+  year={2011},
+  organization={IEEE}
+}
+@inproceedings{bouali2016virtualization,
+  title={Virtualization Techniques: Challenges and Opportunities},
+  author={Bouali, Lyes and Abd-Elrahman, Emad and Afifi, Hossam and Bouzefrane, Samia and Daoui, Mehammed},
+  booktitle={International Conference on Mobile, Secure and Programmable Networking},
+  pages={49--62},
+  year={2016},
+  organization={Springer}
+}
+@inproceedings{dong2013proactive,
+  title={A proactive cloud management architecture for private clouds},
+  author={Dong, Dapeng and Herbert, John},
+  booktitle={Cloud Computing (CLOUD), 2013 IEEE Sixth International Conference on},
+  pages={701--708},
+  year={2013},
+  organization={IEEE}
+}
+@inproceedings{dong2009bluesky,
+  title={BlueSky cloud framework: An e-learning framework embracing cloud computing},
+  author={Dong, Bo and Zheng, Qinghua and Qiao, Mu and Shu, Jian and Yang, Jie},
+  booktitle={IEEE International Conference on Cloud Computing},
+  pages={577--582},
+  year={2009},
+  organization={Springer}
+}
+@article{fernandes2014security,
+  title={Security issues in cloud environments: a survey},
+  author={Fernandes, Diogo AB and Soares, Liliana FB and Gomes, Jo{\~a}o V and Freire, M{\'a}rio M and In{\'a}cio, Pedro RM},
+  journal={International Journal of Information Security},
+  volume={13},
+  number={2},
+  pages={113--170},
+  year={2014},
+  publisher={Springer}
+}
+@inproceedings{vouk2008powered,
+  title={Powered by VCL—using Virtual Computing Laboratory (VCL) Technology to Power Cloud Computing},
+  author={Vouk, Mladen and Averitt, Sam and Bugaev, Michael and Kurth, Andy and Peeler, Aaron and Shaffer, Henry and Sills, Eric and Stein, Sarah and Thompson, Josh and others},
+  booktitle={Proceedings of the 2nd International Conference on Virtual Computing (ICVCI)},
+  pages={15--16},
+  year={2008},
+  organization={RTP NC}
+}
