--- a/pages/abstract.tex
+++ b/pages/abstract.tex
@@ -1,5 +1,4 @@
-\chapter{\abstractname}
-
-%TODO: Abstract
-
-
+\chapter*{\abstractname}
+\addcontentsline{toc}{chapter}{\abstractname}
+%Abstract
+Cloud computing is defined as the industrialization of IT infrastructures and the transfer of computing activity from personal computers (PCs) and private data-centers to large external public and private data-centers, accessible over the Internet \cite{Boss2007}. Due to provisions such as On-demand service, Broad network access, rapid elasticity, resource pooling and measured services available via cloud computing, it is becoming increasingly important for education institutions as their students through cloud-based applications can perform learning tasks more efficiently at an extremely low cost – even lower cost if these applications are available on a private cloud. Private clouds pose the challenge of Quality of Service (QoS) and for cloud service providers its is important to understand how different services of the cloud perform. OpenStack is an open source project for public and private clouds construction and management with core components that combine to provide users a complete cloud infrastructure or independently, provide services - services that aid in performance measurement of individual components or the entire cloud. Benchmark tools such as CloudSuite by EPFL allow to evaluate the private and public cloud performance with specific types of applications. In this work we will introduce Open-Stack and its core components, auto-scaling in OpenStack, deploy a private cloud on I10 Chair's server using Open Stack while explaining the steps with a detailed manual. The evaluation of the deployed OpenStack private cloud with CloudSuite will bring to understanding; its performance, it will reveal the bottlenecks of OpenStack and point at ways to make OpenStack cloud perform optimally.
