--- a/pages/acknowledgements.tex
+++ b/pages/acknowledgements.tex
@@ -1,14 +1,17 @@
+\chapter*{Acknowledgment}
 \addcontentsline{toc}{chapter}{Acknowledgments}
-\thispagestyle{empty}
+\pagenumbering{roman}
+\setcounter{page}{1}
 
-\vspace*{20mm}
+%\vspace*{20mm}
 
-\begin{center}
-{\usekomafont{section} Acknowledgments}
-\end{center}
+%\begin{center}
+%{\usekomafont{section} Acknowledgments}
+%\end{center}
 
-\vspace{10mm}
+%\vspace{10mm}
 
-%TODO: Acknowledgments
+%Acknowledgments
+This masters thesis would not have been possible without the huge support i received throughout the period of my study from professors at TUM, colleagues, friends, family and most especially the supreme being. I would like to also use this opportunity to thank; Prof. Dr. Michael Gerndt, chair Computer Architecture of and Parallel Systems and Vladimir Podolskiy (Dipl.-Ing.) for their great support, constructive comments during the period of this thesis.
 
 \cleardoublepage{}
