--- a/pages/title.tex
+++ b/pages/title.tex
@@ -26,12 +26,12 @@
   \begin{tabular}{l l}
     Author:          & \getAuthor{} \\
     Supervisor:      & \getSupervisor{} \\
-    Advisor:         & \getAdvisor{} \\
+    Advisor:         & \getadvisor{} \\
     Submission Date: & \getSubmissionDate{} \\
   \end{tabular}
 
-  \IfFileExists{logos/faculty.pdf}{%
+  \IfFileExists{logos/faculty.png}{%
     \vfill{}
-    \includegraphics[height=20mm]{logos/faculty.pdf}
+    \includegraphics[height=20mm]{logos/faculty.png}
   }{}
 \end{titlepage}
