--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,7 @@
 \RequirePackage[l2tabu,orthodox]{nag}
-
 % TODO: decide if one-sided/two-sided
 %\documentclass[headsepline,footsepline,footinclude=false,fontsize=11pt,paper=a4,listof=totoc,bibliography=totoc,BCOR=12mm,DIV=12]{scrbook} % two-sided
-\documentclass[headsepline,footsepline,footinclude=false,oneside,fontsize=11pt,paper=a4,listof=totoc,bibliography=totoc]{scrbook} % one-sided
+\documentclass[headsepline, footsepline, footinclude=false oneside,fontsize=12pt,paper=a4,listof=totoc,bibliography=totoc]{report} % one-sided
 
 % TODO: change citation style in settings
 \input{settings}
@@ -10,43 +9,51 @@
 % TODO: change thesis information
 \newcommand*{\getUniversity}{Technische Universität München}
 \newcommand*{\getFaculty}{Department of Informatics}
-\newcommand*{\getTitle}{Thesis title}
-\newcommand*{\getTitleGer}{Titel der Abschlussarbeit}
-\newcommand*{\getAuthor}{Author}
-\newcommand*{\getDoctype}{Thesis type (Bachelor's Thesis in Informatics, Master's Thesis in Robotics, \ldots)}
-\newcommand*{\getSupervisor}{Supervisor}
-\newcommand*{\getAdvisor}{Advisor}
-\newcommand*{\getSubmissionDate}{Submission date}
+\newcommand*{\getTitle}{Private cloud based on OpenStack and its evaluation using EPFL CloudSuite}
+\newcommand*{\getTitleGer}{Privat Cloud basierend auf OpenStack und deren Auswertung mit EPFL CloudSuite}
+\newcommand*{\getAuthor}{Victor Chukwusimdimma Aguboshim}
+\newcommand*{\getDoctype}{Master's Thesis in Informatics}
+\newcommand*{\getadvisor}{Vladimir Podolskiy (Dipl.-Ing.)}
+\newcommand*{\getSupervisor}{Prof. Dr. Michael Gerndt}
+\newcommand*{\getSubmissionDate}{\today}
 \newcommand*{\getSubmissionLocation}{Munich}
 
 \begin{document}
 
 % Set page numbering to avoid "destination with the same identifier has been already used" warning for cover page.
 % (see https://en.wikibooks.org/wiki/LaTeX/Hyperlinks#Problems_with_Links_and_Pages).
-\pagenumbering{alph}
 \input{pages/cover}
 
-\frontmatter{}
+%\frontmatter{}
 
 \input{pages/title}
+
 \input{pages/disclaimer}
 \input{pages/acknowledgements}
 \input{pages/abstract}
 \microtypesetup{protrusion=false}
+
 \tableofcontents{}
+
 \microtypesetup{protrusion=true}
 
-\mainmatter{}
+%\mainmatter{}
 
 \input{chapters/01_introduction}
+\input{chapters/02_literature_review}
+\input{chapters/03_research_methodology}
+\input{chapters/04_research_results}
+\input{chapters/05_Conclusion_recommendation}
 % TODO: add more chapters here
 
-\appendix{}
+%appendix{}
 
 \microtypesetup{protrusion=false}
 \listoffigures{}
 \listoftables{}
 \microtypesetup{protrusion=true}
-\printbibliography{}
-
+\printbibliography[
+title = References]{}
+\appendix
+\input{chapters/06_Appendix}
 \end{document}
