--- a/pages/cover.tex
+++ b/pages/cover.tex
@@ -8,9 +8,9 @@
   \hsize=\textwidth\relax
 
   \centering
-
-  \IfFileExists{logos/tum.pdf}{%
-    \includegraphics[height=20mm]{logos/tum.pdf}
+  
+  \IfFileExists{logos/TumLogo.png}{%
+    \includegraphics[height=20mm]{logos/TumLogo.png}
   }{%
     \vspace*{20mm}
   }
@@ -30,8 +30,8 @@
   \vspace{15mm}
   {\LARGE \getAuthor{}}
 
-  \IfFileExists{logos/faculty.pdf}{%
+  \IfFileExists{logos/faculty.png}{%
     \vfill{}
-    \includegraphics[height=20mm]{logos/faculty.pdf}
+    \includegraphics[height=20mm]{logos/faculty.png}
   }{}
 \end{titlepage}
