--- a/settings.tex
+++ b/settings.tex
@@ -5,15 +5,15 @@
 \usepackage[sc]{mathpazo}
 \usepackage[ngerman,american]{babel}
 \usepackage[autostyle]{csquotes}
-\usepackage[%
+\usepackage[
   backend=biber,
-  url=false,
-  style=alphabetic,
+  url=true,
+  style=numeric,
   maxnames=4,
   minnames=3,
   maxbibnames=99,
   giveninits,
-  uniquename=init]{biblatex} % TODO: adapt citation style
+  uniquename=init] {biblatex} % TODO: adapt citation style
 \usepackage{graphicx}
 \usepackage{scrhack} % necessary for listings package
 \usepackage{listings}
@@ -25,10 +25,13 @@
 \usepackage[final]{microtype}
 \usepackage{caption}
 \usepackage[hidelinks]{hyperref} % hidelinks removes colored boxes around references and links
-
 \bibliography{bibliography}
-
-\setkomafont{disposition}{\normalfont\bfseries} % use serif font for headings
+\usepackage[super]{nth}
+\usepackage[]{floatrow}
+\usepackage[titletoc]{appendix}
+\usepackage[hang]{footmisc}
+%\usepackage[toc,page]{appendix}
+%\setkomafont{disposition}{\normalfont\bfseries} % use serif font for headings
 \linespread{1.05} % adjust line spread for mathpazo font
 
 % Add table of contents to PDF bookmarks
@@ -65,3 +68,6 @@
   keywordstyle=\bfseries\color{TUMBlue},
   stringstyle=\color{TUMAccentGreen}
 }
+% setting paragraphing
+\setlength{\parindent}{0em}
+\setlength{\footnotemargin}{3mm}
